<resources>
    <string name="app_name">ExpensR</string>

    <string name="add_transaction">Add transaction</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="no_description">No description</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_description">Transaction Description</string>
    <string name="add">Add</string>
    <string name="expense">Expense</string>
    <string name="amount_in_usd">Amount in $</string>
    <string name="oops_something_went_wrong">Oops, something went wrong</string>
    <string name="transaction_added">Transaction added!</string>
    <string name="delete_transaction">Delete transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="transaction_deleted">Transaction deleted</string>
    <string name="undo">UNDO</string>
    <string name="add_random_data">Add random data</string>
    <string name="clear_data">Clear all data</string>
</resources>
