<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/androidx_appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/top_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large">

            <TextView
                android:id="@+id/expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/expenses"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/income"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/income"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/balance"
                app:layout_constraintStart_toEndOf="@id/expense"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/balance"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/income"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/balance_ratio"
                app:layout_constraintEnd_toEndOf="@id/expense"
                app:layout_constraintStart_toStartOf="@id/expense"
                app:layout_constraintTop_toBottomOf="@id/expense" />

            <TextView
                android:id="@+id/incomeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/balance_ratio"
                app:layout_constraintEnd_toEndOf="@id/income"
                app:layout_constraintStart_toStartOf="@id/income"
                app:layout_constraintTop_toBottomOf="@id/income" />

            <TextView
                android:id="@+id/balanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/balance_ratio"
                app:layout_constraintEnd_toEndOf="@id/balance"
                app:layout_constraintStart_toStartOf="@id/balance"
                app:layout_constraintTop_toBottomOf="@id/balance" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/balance_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:trackColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/margin_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/add_transaction"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
